--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,6 +8,22 @@
     min-height: 100vh;
 }
 
+.iconBar {
+    text-align: left;
+}
+
+.icon {
+    text-decoration: none;
+    font-size: 70px;
+    font-weight: 700;
+    color: #333333;
+    margin-right: 25px;
+}
+
+.icon:hover {
+    color: #4f9eff;
+}
+
 .content {
     flex-grow: 1;
 }
