--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -13,6 +13,7 @@
 .horLine {
     max-width: 875px;
     border-top: 10px solid #333333;
+    white-space: nowrap;
 }
 
 .navItem {
@@ -29,7 +30,6 @@
 }
 
 .active-nav-item {
-    //color: #949494;
     color: #4f9eff;
 }
 
